cmps104a/asg3/test/95-cobol.oc.err
oc: 95-cobol.oc: 3: syntax error, unexpected TOK_INTCON
