cmps104a/asg3/test/95-cobol.str
stringset[   1]:    8476822520031942378: 0x22efcd8->"EXIT"
                    4533532405753959164: 0x22e7ad8->"001100"
stringset[   2]:    2594088158685378223: 0x22ef8c8->"10"
                   10268214354146226833: 0x22eece8->"1200"
stringset[   3]:    8848093992654105885: 0x22efa58->"RUN"
                    9899794913433185065: 0x22e7408->"DIVISION."
stringset[   4]:    5992026097059719199: 0x22e7dc8->"MAIN-LOGIC"
stringset[   6]:    5975919029562434157: 0x22e81d8->"world!""
stringset[   7]:   11668471760152936011: 0x22e73b8->"IDENTIFICATION"
stringset[  11]:    9692788208439722702: 0x22e7998->"OBJECT-COMPUTER."
                   12027481764534909395: 0x22e78e8->"RM-COBOL."
                   14618159606949852052: 0x22e7458->"000200"
stringset[  12]:    2817478050987672464: 0x22ed848->"500"
stringset[  14]:   16505281302463325882: 0x22e77e8->"SECTION."
stringset[  15]:    8749905388617569012: 0x22ef1e8->"BEGIN"
                    8083954885302234186: 0x22ed618->"400"
                   13667612406867811666: 0x22e8368->"RUN."
stringset[  16]:    8528942095927433006: 0x22ef738->""Hello world!""
                    3485831935091574919: 0x22e7e68->"BEGIN."
stringset[  19]:    2366151243705444291: 0x22e8098->"ERASE"
stringset[  20]:   14773745439228563802: 0x22e7b78->"100700"
stringset[  22]:   10159970873491820195: 0x22e7ff8->"1"
stringset[  24]:     848867923138271600: 0x22e7548->"000300"
stringset[  25]:    4603147665287872912: 0x22eef68->"MAIN"
                    6343797728819096967: 0x22e7d78->"100200"
stringset[  28]:    4764204919547260605: 0x22ee388->"OBJECT"
                     101296173680447455: 0x22e75e8->"000500"
stringset[  29]:    8115490840279316602: 0x22ed078->"PROGRAM"
stringset[  30]:   10309170059231547679: 0x22e7898->"SOURCE-COMPUTER."
                   17449304726471560091: 0x22e74f8->"HELLOWORLD."
stringset[  31]:   11041821498051098868: 0x22eeab8->"1100"
stringset[  32]:   11749562128152811880: 0x22e7838->"000700"
stringset[  33]:    3462224256807982264: 0x22ee108->"COBOL"
stringset[  35]:   16250758790188753277: 0x22e7d28->"100100"
stringset[  36]:   18104328237522131839: 0x22edbb8->"SECTION"
stringset[  39]:    6637962690434301267: 0x22edac8->"600"
                    3000827399044917548: 0x22ecda8->"DIVISION"
stringset[  40]:    5023835908241093643: 0x22ed1b8->"ID"
stringset[  42]:    8123926825918656885: 0x22e7748->"PROCEDURE"
stringset[  43]:   10110854800518129440: 0x22edf28->"COMPUTER"
                    6530573821985112690: 0x22e8318->"STOP"
stringset[  47]:   16224746280471176453: 0x22e7c78->"EXIT."
                    5707671176792890449: 0x22e7598->"000400*"
stringset[  48]:   15130070450414024771: 0x22ef5a8->"EOS"
stringset[  50]:    3346600377836954007: 0x22e7b28->"FILE"
stringset[  51]:      65578900156297455: 0x22e74a8->"PROGRAM-ID."
stringset[  52]:    4975450011984783841: 0x22e7728->"100000"
stringset[  53]:   11262925248683168980: 0x22ed488->"300"
stringset[  54]:    2856247231245445436: 0x22e7c28->"100800"
stringset[  55]:    6170948393124337101: 0x22edd98->"700"
                    2297668033614959926: 0x22eca88->"0"
                   17675615744022553182: 0x22e7798->"CONFIGURATION"
                   16474229124768219677: 0x22e7688->"000600"
                     159993502864411231: 0x22e7368->"000100"
stringset[  56]:    1559822377874549718: 0x22ef058->"LOGIC"
                   11683372015007288834: 0x22e79e8->"000900"
stringset[  59]:   14633305175400438363: 0x22e8138->"100500"
stringset[  60]:   10763892105548688733: 0x22e82c8->"100600"
stringset[  62]:    9459438815593384502: 0x22e7a88->"DATA"
stringset[  64]:    5687493358103633321: 0x22e76d8->"001200"
                    3806281540898964462: 0x22e7f58->"""
stringset[  68]:   15129060197165267835: 0x22ee2e8->"800"
                   11590517852533769637: 0x22e7938->"000800"
stringset[  70]:   12485971477340877982: 0x22e7a38->"001000"
                     603146580336197870: 0x22e8228->"15"
stringset[  72]:    2963571779194552878: 0x22e7eb8->"100400"
stringset[  76]:    3031676173105530525: 0x22e8048->"POSITION"
stringset[  78]:    7989954789217878515: 0x22e7638->"ENVIRONMENT"
stringset[  79]:    6340238197210063670: 0x22e7018->"100"
                   11133740230814649646: 0x22e7f08->"DISPLAY"
stringset[  80]:   16079285148485733777: 0x22ee888->"1000"
                     607052256690452275: 0x22ee748->"900"
stringset[  82]:    6921971865612019692: 0x22ee018->"RM"
                    5043462581395144197: 0x22e8188->""Hello"
stringset[  85]:   10010194838115560012: 0x22ef378->"" ""
                    7372855250431704371: 0x22ed118->"-"
stringset[  86]:    3506203549115477658: 0x22ed2a8->"HELLOWORLD"
stringset[  88]:    1632198207615728178: 0x22e7fa8->"LINE"
stringset[  89]:    6637313742931709005: 0x22ed6b8->"*"
                   15099569138734304119: 0x22ece48->"."
stringset[  90]:     816481200638801389: 0x22ede38->"SOURCE"
                    5564098233480155772: 0x22e7bd8->"MAIN-LOGIC-EXIT."
stringset[  93]:    8318437171067493754: 0x22ecfd8->"200"
                     659007858766936891: 0x22e80e8->"EOS."
                   13562144813845494497: 0x22e8278->"10."
stringset[  94]:    9851758844805121084: 0x22e7e18->"100300"
load_factor = 0.887
bucket_count = 97
max_bucket_size = 5
